2006-Sep-22  Heikki Junnila <hjunnila@users.sf.net>
	* Added a preliminary plugin manager to File menu.

2006-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in XYPad, which didn't save the channels' reverse state

2006-Sep-08  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed EFX run order & direction, which didn't work at all before.

2006-Sep-03  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in efxeditor: correct start & stop scenes were not
	  selected when the dialog was opened a second time.
	* --> Changed combos to listviews so that the function ID can
	  be hidden from the user.
	* Fixed some tooltips in plugin config dialogs.

2006-Sep-01  Heikki Junnila <hjunnila@users.sf.net>
	* Added double click as a default action for "Edit" in function
	  manager's editing mode, and "Select" as the default action in
	  selection mode.
	* Changed all columns to show focus in collection editor.

2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Added Fedora-specific stuff & error solution to libs/usbdmx/README

2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Changed a double value in app.cpp to t_value (int) to get rid of
	  the compiler warning.
	* Changed newdevice.cpp so that if the user has not touched the
	  name field, it will be filled with the device model. If the user
	  types something, the name is not replaced, unless length == 0.
	* Removed libs/usbdmxout/Makefile.in because it is autogenerated.

2006-Mar-05  Stefan Krumm <stefankrumm@users.sf.net>
	* Added a "stop all running functions feature" to the virtual console
	  buttons.
	* Midi input/output works
	* Support for the Behringer BCF2000 USB external fader unit

2006-Feb-12  Stefan Krumm <stefankrumm@users.sf.net>
	* usb2dmx driver for the Peperoni-Light interfaces should be
	  complete. Still missing is a capability for reading from the device.
	* Changed the black-out function in app.cpp to send a writeRange()
	  because sending "0" to individual channels was too slow.